# CMakeSetupTemplate

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Doxyfile.in  LICENSE  README.md  config.txt
.cmake/: README.md
data/: README.md
demo/: CMakeLists.txt  README.md  main.cpp
docs/: Doxyfile.in  README.md
include/: README.md  mymath.h
src/: CMakeLists.txt  README.md  a.h  main.cpp  math.cpp  math.h  mymath.cpp
tests/: CMakeLists.txt  README.md  math_test.cpp  mymath_test.cpp
tests/files/: test_mymath.cpp
